<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/music_list_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:background="@color/app_theme"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:id="@+id/ii_common_musicList"
        android:layout_width="fill_parent"
        android:layout_height="48dp">

        <ImageView
            android:id="@+id/iv_listback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
             android:padding="8dp"
            android:src="@drawable/back_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/music_list_play"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/iv_listsearch"
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="8dp"
            android:src="@drawable/xunhuan" />
    </RelativeLayout>
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_musicList"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/music_list_songs"
            android:textSize="18sp"
            android:textColor="@color/select_item_text"></TextView>
        <TextView
            android:id="@+id/tv_favoriteList"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/music_list_fav"
            android:textColor="@color/selected_item_text"
            android:textSize="18sp" />
    </LinearLayout>

  <android.support.v4.view.ViewPager
        android:id="@+id/vp_music"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" /> 

</LinearLayout>
